Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7921

cpl window is not activated if it is already open

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Shell
    • None
    • VMWare Workstation 10

    Description

      Go to Control Panel, double click Time/Date. 'Properties for Date/Time' window will appear. Activate desktop window. Double click Time/Date again - window will not be activated.

      Attachments

        Issue Links

          Activity

            People

              RaymondCzerny RaymondCzerny
              EDIJS EDIJS
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: